# kim-convergence

./: .gitignore  README.md  log.lammps  pyproject.toml  setup_kim_convergence_env.sh  setup_kim_convergence_env_umn.sh
examples/brownian_oscillator/: brownian_oscillator.py  brownian_oscillator.yaml
examples/brownian_oscillator/outputs/20250713_215259/.hydra/: config.yaml  hydra.yaml
examples/lammps_LJ/: LJ.yaml  plots.py  test.in
examples/urea/: elastic_T.py  elastic_T.yaml
lammps_src/: kim_convergence.cpp  kim_convergence.h  kim_convergence_hook.py  mycommand.cpp  mycommand.h  mycommand_kernel.py
src/kim_convergence/: core.py  gatherer.py  utils.py
src/kim_convergence/callbacks/: autocorr.py  mcr.py  mean_in_bounds.py  rangeLoop.py  statistical_inefficiency.py
src/kim_convergence/callbacks/lammps/: recordState.py
src/kim_convergence/callbacks/lammps/elastic/: logger.py
src/kim_convergence/callbacks/lammps/integrators/: nvt.py
src/kim_convergence/callbacks/lammps/utils/: loadRestart.py  recordState.py
src/kim_convergence/stages/: equilibrate.py  production.py
src/kim_convergence/steps/lammps/: step_fn.py
